category form submit using AJAX  validation

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,47 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
+public/assets/img/avatars/1.png
+public/assets/img/avatars/5.png
+public/assets/img/avatars/6.png
+public/assets/img/avatars/7.png
+public/assets/img/backgrounds/18.jpg
+public/assets/img/elements/1.jpg
+public/assets/img/elements/2.jpg
+public/assets/img/elements/3.jpg
+public/assets/img/elements/4.jpg
+public/assets/img/elements/5.jpg
+public/assets/img/elements/7.jpg
+public/assets/img/elements/11.jpg
+public/assets/img/elements/12.jpg
+public/assets/img/elements/13.jpg
+public/assets/img/elements/17.jpg
+public/assets/img/elements/18.jpg
+public/assets/img/elements/19.jpg
+public/assets/img/elements/20.jpg
+public/assets/img/favicon/favicon.ico
+public/assets/img/icons/brands/asana.png
+public/assets/img/icons/brands/behance.png
+public/assets/img/icons/brands/dribbble.png
+public/assets/img/icons/brands/facebook.png
+public/assets/img/icons/brands/github.png
+public/assets/img/icons/brands/google.png
+public/assets/img/icons/brands/instagram.png
+public/assets/img/icons/brands/mailchimp.png
+public/assets/img/icons/brands/slack.png
+public/assets/img/icons/brands/twitter.png
+public/assets/img/icons/unicons/cc-primary.png
+public/assets/img/icons/unicons/cc-success.png
+public/assets/img/icons/unicons/cc-warning.png
+public/assets/img/icons/unicons/chart-success.png
+public/assets/img/icons/unicons/chart.png
+public/assets/img/icons/unicons/paypal.png
+public/assets/img/icons/unicons/wallet-info.png
+public/assets/img/icons/unicons/wallet.png
+public/assets/img/illustrations/girl-doing-yoga-light.png
+public/assets/img/illustrations/man-with-laptop-light.png
+public/assets/img/illustrations/page-misc-error-light.png
+public/assets/img/layouts/layout-container-light.png
+public/assets/img/layouts/layout-fluid-light.png
+public/assets/img/layouts/layout-without-menu-light.png
+public/assets/img/layouts/layout-without-navbar-light.png
